--- a/startbootstrap-new-age-gh-pages/Download.html
+++ b/startbootstrap-new-age-gh-pages/Download.html
@@ -64,8 +64,8 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-xxl-6">
                         <div class="text-center my-5">
-                            <h2 class="text-white font-alt mb-4">Get the app now!</h2>
-                            <p class="lead text-white-50 mb-4">Our app is available on all major platforms. Download it today and start enjoying all its features!</p>
+                            <h2 class="text-white font-alt mb-4">¡No esperes más! Descarga la App  y disfruta de beneficios únicos.</h2>
+                            <p class="lead text-white-50 mb-4">Mantente al día con nuestros eventos, nuevos productos y ofertas especiales a través de nuestra app.Disponible en las principales plataformas.</p>
                             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
                                 <a class="me-lg-3 mb-4 mb-lg-0" href="#!">
                                     <img class="app-badge" src="assets/img/google-play-badge.svg" alt="Get it on Google Play" />
