Ingreso de informacion a la seccion con instrucciones y el footer ademas cargar la imagen

--- a/startbootstrap-new-age-gh-pages/Download.html
+++ b/startbootstrap-new-age-gh-pages/Download.html
@@ -54,7 +54,7 @@
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">¿Antojo de un delicioso café o un postre? ¡Nuestra app te lo lleva! Olvídate de las filas y pide a tu propio ritmo.Con nuestra aplicación, podrás explorar nuestro menú completo, personalizar tus pedidos, guardar tus favoritos y pagar de forma segura.</p>
                     </div>
                     <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle" src="img/cafe.png" alt="..." /></div>
+                        <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle" src="assets/img/cafe.png" alt="..." /></div>
                     </div>
                 </div>
             </div>
@@ -86,18 +86,18 @@
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6">
                         <div class="mb-5 mb-lg-0">
-                            <h2 class="display-5 lh-1 mb-3">Easy installation</h2>
-                            <p class="lead fw-normal text-muted mb-0">Follow these simple steps to get started:</p>
+                            <h2 class="display-5 lh-1 mb-3">¡Pide tu café en 3 simples pasos!</h2>
+                            <p class="lead fw-normal text-muted mb-0">Disfruta de "Dulce aroma" al instante:</p>
                             <ul class="lead fw-normal text-muted">
-                                <li>Click on your preferred download button</li>
-                                <li>Install the application</li>
-                                <li>Open and enjoy all features</li>
+                                <li>Descarga nuestra App desde tu tienda favorita.</li>
+                                <li>Explora nuestro delicioso menú y personaliza tu pedido.</li>
+                                <li>¡Listo! Disfruta de tu café y snacks favoritos</li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="px-5 px-sm-0">
-                            <img class="img-fluid rounded" src="https://source.unsplash.com/K9QHL52rE2k/600x400" alt="Installation steps" />
+                            <img class="img-fluid rounded" src="assets/img/movil.png" alt="Installation steps" />
                         </div>
                     </div>
                 </div>
@@ -108,10 +108,10 @@
         <footer class="bg-black text-center py-5">
             <div class="container px-5">
                 <div class="text-white-50 small">
-                    <div class="mb-2">&copy; Your Website 2023. All Rights Reserved.</div>
-                    <a href="#!">Privacy</a>
+                    <div class="mb-2">&copy; Tu sitio wed 2025.Todos los derechos reservados.</div>
+                    <a href="#!">Privacidad</a>
                     <span class="mx-1">&middot;</span>
-                    <a href="#!">Terms</a>
+                    <a href="#!">Terminos</a>
                     <span class="mx-1">&middot;</span>
                     <a href="#!">FAQ</a>
                 </div>
