Informacion de la barra de navegacion y envio de comentarios

--- a/startbootstrap-new-age-gh-pages/Download.html
+++ b/startbootstrap-new-age-gh-pages/Download.html
@@ -141,7 +141,7 @@
                             </div>
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-                                <label for="phone">Numero de telefono</label>
+                                <label for="phone">Numero de teléfono</label>
                                 <div class="invalid-feedback" data-sb-feedback="phone:required">Se requiere un numero de telefono</div>
                             </div>
                             <div class="form-floating mb-3">
