Agregacion de slogan y video

--- a/startbootstrap-new-age-gh-pages/index.html
+++ b/startbootstrap-new-age-gh-pages/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
         </nav>
-        <!-- Mashead header-->
+        <!-- Mashead header--> 
         <header class="masthead">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
@@ -49,7 +49,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-1 lh-1 mb-3">Tu café perfecto!</h1>
-                            <p class="lead fw-normal text-muted mb-5">Launch your mobile app landing page faster with this free, open source theme from Start Bootstrap!</p>
+                            <p class="lead fw-normal text-muted mb-5">Descubre la app de Dulce Aroma: tu compañero ideal para encontrar y disfrutar el mejor café desde tu celular.</p>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                                 <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="assets/img/google-play-badge.svg" alt="..." /></a>
                                 <a href="#!"><img class="app-badge" src="assets/img/app-store-badge.svg" alt="..." /></a>
@@ -78,7 +78,7 @@
                                         <!-- * * This can be a video, image, or just about anything else.-->
                                         <!-- * * Set the max width of your media to 100% and the height to-->
                                         <!-- * * 100% like the demo example below.-->
-                                        <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="assets/img/demo-screen.mp4" type="video/mp4" /></video>
+                                        <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="assets/cafe.mp4" type="video/mp4" /></video>
                                     </div>
                                 </div>
                             </div>
