--- a/startbootstrap-new-age-gh-pages/index.html
+++ b/startbootstrap-new-age-gh-pages/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
+        <meta name="description" content="App Dulce Aroma - Encuentra tu café perfecto" />
         <meta name="author" content="" />
         <title>Dulce Aroma - Tú café perfecto</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -95,9 +95,9 @@
             <div class="cta-content">
                 <div class="container px-5">
                     <h2 class="text-white display-1 lh-1 mb-4">
-                        Stop waiting.
+                        Deja la rutina,
                         <br />
-                        Start building.
+                        ¡saborea el momento!
                     </h2>
                     <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="Download.html" target="_blank">Download for free</a>
                 </div>
@@ -117,7 +117,7 @@
         <footer class="bg-black text-center py-5">
             <div class="container px-5">
                 <div class="text-white-50 small">
-                    <div class="mb-2">&copy; Your Website 2023. All Rights Reserved.</div>
+                    <div class="mb-2">&copy; Dulce Aroma 2025. Todos los derechos reservados.</div>
                     <a href="#!">Privacy</a>
                     <span class="mx-1">&middot;</span>
                     <a href="#!">Terms</a>
