--- a/startbootstrap-new-age-gh-pages/features.html
+++ b/startbootstrap-new-age-gh-pages/features.html
@@ -117,7 +117,8 @@
                             <div class="device-wrapper">
                                 <div class="device" data-device="iPhoneX" data-orientation="portrait" data-color="black">
                                     <div class="screen bg-black">
-                                        <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="assets/img/demo-screen.mp4" type="video/mp4" /></video>
+                                        <img src="/startbootstrap-new-age-gh-pages/assets/img/telefono.jpg" alt="..." style="height: 100%; width: 100%" />
+                                        
                                     </div>
                                 </div>
                             </div>
