Se agrego colaborador de productos Ecuatorianos - Raymi COOFFE

--- a/startbootstrap-business-casual-gh-pages/products.html
+++ b/startbootstrap-business-casual-gh-pages/products.html
@@ -92,7 +92,31 @@
                 </div>
             </div>
         </section>
-        
+        <section class="page-section">
+            <div class="container">
+                <div class="product-item">
+                    <div class="product-item-title d-flex">
+                        <div class="bg-faded p-5 d-flex ms-auto rounded">
+                            <h2 class="section-heading mb-0">
+                                <span class="section-heading-upper">Auspiciante - Colaborador</span>
+                                <span class="section-heading-lower">RAYMI COFFEE</span>
+                            </h2>
+                        </div>
+                    </div>
+                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/raymi01.jpg" alt="Productos andinos" />
+                    <div class="product-item-description d-flex me-auto">
+                        <div class="bg-faded p-5 rounded"><p class="mb-0">Raymi Coffee es una marca de café 
+                            ecuatoriana de alta calidad fundada por el influyente youtuber y emprendedor 
+                            Damián Bernal, también conocido como "El Champ". Este proyecto nació de su pasión
+                             por el café y su deseo de promover el café ecuatoriano a nivel internacional, 
+                             combinando tradición y sostenibilidad. Con un enfoque en la producción artesanal 
+                             y el apoyo a los productores locales, Raymi Coffee busca posicionar a Ecuador 
+                             como un referente cafetalero, ofreciendo un producto premium que refleja la 
+                             riqueza cultural y natural de nuestro país.</p></div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Formulario de Sugerencias -->
         <section class="page-section cta">
             <div class="container">
