Se cambio el nombre del boton de descarga

--- a/startbootstrap-new-age-gh-pages/index.html
+++ b/startbootstrap-new-age-gh-pages/index.html
@@ -99,7 +99,7 @@
                         <br />
                         ¡saborea el momento!
                     </h2>
-                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="Download.html" target="_blank">Download for free</a>
+                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="Download.html" target="_blank">Descarga Gratis</a>
                 </div>
             </div>
         </section>
