--- a/startbootstrap-business-casual-gh-pages/index.html
+++ b/startbootstrap-business-casual-gh-pages/index.html
@@ -50,7 +50,7 @@
                            
                             
                             </p>
-                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#!">Visit Us Today!</a></div>
+                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#!">Visítanos hoy!</a></div>
                     </div>
                 </div>
             </div>
