Se actualizo el apartado de promesa del emprendimiento

--- a/startbootstrap-business-casual-gh-pages/index.html
+++ b/startbootstrap-business-casual-gh-pages/index.html
@@ -61,10 +61,12 @@
                     <div class="col-xl-9 mx-auto">
                         <div class="cta-inner bg-faded text-center rounded">
                             <h2 class="section-heading mb-4">
-                                <span class="section-heading-upper">Our Promise</span>
-                                <span class="section-heading-lower">To You</span>
+                                <span class="section-heading-upper">Nuestra Promesa</span>
+                                <span class="section-heading-lower">Para Ti</span>
                             </h2>
-                            <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
+                            <p class="mb-0">En Sabores del Ecuador, cada nuevo día es una oportunidad para brindarte lo mejor. Desde el momento en que entras a nuestra tienda —física o virtual— nos comprometemos a ofrecerte un servicio cálido, una atmósfera acogedora y, por supuesto, productos de la más alta calidad, elaborados con ingredientes seleccionados con cuidado y pasión.
+
+                                Queremos que cada experiencia contigo sea memorable y auténtica. Si por alguna razón no quedas satisfecho con tu compra, no dudes en contactarnos: haremos todo lo posible para corregirlo y asegurarnos de que quedes completamente contento.</p>
                         </div>
                     </div>
                 </div>
