--- a/startbootstrap-business-casual-gh-pages/index.html
+++ b/startbootstrap-business-casual-gh-pages/index.html
@@ -12,6 +12,8 @@
         <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <!-- En la sección <head> -->
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     </head>
     <body>
         <header>
@@ -73,11 +75,30 @@
             </div>
         </section>
         <footer class="footer text-faded text-center py-5">
-            <div class="container"><p class="m-0 small">Copyright &copy; Your Website 2023</p></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 mb-4 mb-md-0">
+                        <h4 class="text-uppercase mb-4">Contacto</h4>
+                        <p class="mb-0">info@saboresdelecuador.com<br>+593 99 887 5544</p>
+                    </div>
+                    <div class="col-md-4 mb-4 mb-md-0">
+                        <h4 class="text-uppercase mb-4">Horario</h4>
+                        <p class="mb-0">Lunes a Viernes: 9am - 6pm<br>Sábados: 10am - 4pm</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h4 class="text-uppercase mb-4">Síguenos</h4>
+                        <div class="d-flex justify-content-center">
+                            <a href="#" class="text-white mx-3"><i class="fab fa-facebook-f fa-2x"></i></a>
+                            <a href="#" class="text-white mx-3"><i class="fab fa-instagram fa-2x"></i></a>
+                            <a href="#" class="text-white mx-3"><i class="fab fa-whatsapp fa-2x"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <p class="m-0 small mt-4">Copyright &copy; Sabores del Ecuador 2023</p>
+            </div>
         </footer>
-        <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
+        <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
         <script src="js/scripts.js"></script>
     </body>
 </html>
