Se agrego funcionalidad al boton VISITANOS HOY

--- a/startbootstrap-business-casual-gh-pages/index.html
+++ b/startbootstrap-business-casual-gh-pages/index.html
@@ -52,8 +52,11 @@
                            
                             
                             </p>
-                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#!">Visítanos hoy!</a></div>
-                    </div>
+                            <div class="intro-button mx-auto">
+                                <a class="btn btn-primary btn-xl" href="https://maps.google.com/?q=Universidad+Técnica+de+Ambato" target="_blank">
+                                  ¡Visítanos hoy!
+                                </a>
+                              </div>
                 </div>
             </div>
         </section>
