Se realizo un rebranding Sabores del Ecuador a Dulce Aroma

--- a/startbootstrap-business-casual-gh-pages/index.html
+++ b/startbootstrap-business-casual-gh-pages/index.html
@@ -19,7 +19,7 @@
         <header>
             <h1 class="site-heading text-center text-faded d-none d-lg-block">
                 <span class="site-heading-upper text-primary mb-3">PRODUCTOS 100% ECUATORIANOS</span>
-                <span class="site-heading-lower">SABORES DEL ECUADOR</span>
+                <span class="site-heading-lower">Dulce Aroma</span>
             </h1>
         </header>
         <!-- Navigation-->
@@ -47,7 +47,7 @@
                             <span class="section-heading-upper">Café fresco con identidad</span>
                             <span class="section-heading-lower">Una experiencia transforma tus mañanas</span>
                         </h2>
-                        <p class="mb-3">En Sabores del Ecuador, cada taza cuenta una historia. Nuestro café artesanal de alta calidad nace en las tierras fértiles del Ecuador, donde seleccionamos cuidadosamente granos locales cultivados a mano por productores comprometidos con la excelencia. Desde las montañas de Loja hasta las fincas de Manabí, cada origen aporta una riqueza de sabores únicos que se unen en una taza inigualable.
+                        <p class="mb-3">En Dulce Aroma, cada taza cuenta una historia. Nuestro café artesanal de alta calidad nace en las tierras fértiles del Ecuador, donde seleccionamos cuidadosamente granos locales cultivados a mano por productores comprometidos con la excelencia. Desde las montañas de Loja hasta las fincas de Manabí, cada origen aporta una riqueza de sabores únicos que se unen en una taza inigualable.
 
                            
                             
@@ -69,7 +69,7 @@
                                 <span class="section-heading-upper">Nuestra Promesa</span>
                                 <span class="section-heading-lower">Para Ti</span>
                             </h2>
-                            <p class="mb-0">En Sabores del Ecuador, cada nuevo día es una oportunidad para brindarte lo mejor. Desde el momento en que entras a nuestra tienda —física o virtual— nos comprometemos a ofrecerte un servicio cálido, una atmósfera acogedora y, por supuesto, productos de la más alta calidad, elaborados con ingredientes seleccionados con cuidado y pasión.
+                            <p class="mb-0">En Dulce Aroma, cada nuevo día es una oportunidad para brindarte lo mejor. Desde el momento en que entras a nuestra tienda —física o virtual— nos comprometemos a ofrecerte un servicio cálido, una atmósfera acogedora y, por supuesto, productos de la más alta calidad, elaborados con ingredientes seleccionados con cuidado y pasión.
 
                                 Queremos que cada experiencia contigo sea memorable y auténtica. Si por alguna razón no quedas satisfecho con tu compra, no dudes en contactarnos: haremos todo lo posible para corregirlo y asegurarnos de que quedes completamente contento.</p>
                         </div>
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                 </div>
-                <p class="m-0 small mt-4">Copyright &copy; Sabores del Ecuador 2023</p>
+                <p class="m-0 small mt-4">Copyright &copy; Dulce Aroma 2025</p>
             </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
