Se continuo con la aplicacion del rebranding en la imagen y en el copyrigth

--- a/startbootstrap-business-casual-gh-pages/index.html
+++ b/startbootstrap-business-casual-gh-pages/index.html
@@ -82,7 +82,7 @@
                 <div class="row">
                     <div class="col-md-4 mb-4 mb-md-0">
                         <h4 class="text-uppercase mb-4">Contacto</h4>
-                        <p class="mb-0">info@saboresdelecuador.com<br>+593 99 887 5544</p>
+                        <p class="mb-0">info@dulcearoma.com<br>+593 99 887 5544</p>
                     </div>
                     <div class="col-md-4 mb-4 mb-md-0">
                         <h4 class="text-uppercase mb-4">Horario</h4>
