--- a/startbootstrap-business-casual-gh-pages/about.html
+++ b/startbootstrap-business-casual-gh-pages/about.html
@@ -12,6 +12,8 @@
         <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     </head>
     <body>
         <header>
