Se agrego el contenido explicativo de el About

--- a/startbootstrap-business-casual-gh-pages/about.html
+++ b/startbootstrap-business-casual-gh-pages/about.html
@@ -47,14 +47,13 @@
                         <div class="col-xl-9 col-lg-10 mx-auto">
                             <div class="bg-faded rounded p-5">
                                 <h2 class="section-heading mb-4">
-                                    <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                                    <span class="section-heading-lower">About Our Cafe</span>
+                                    <span class="section-heading-upper">Pasión por el Café, Orgullo Ecuatoriano</span>
+                                    <span class="section-heading-lower">Sobre Dulce Aroma</span>
                                 </h2>
-                                <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
+                                <p>Fundada en el corazón de Ecuador, Dulce Aroma nació del deseo de crear un espacio donde el buen café y los momentos especiales se encuentren. Desde nuestros inicios, nos hemos dedicado a seleccionar granos de café de alta calidad, cultivados por manos expertas en las regiones cafetaleras más reconocidas del país. Cada taza cuenta una historia de tradición, sabor y dedicación.</p>
                                 <p class="mb-0">
-                                    We guarantee that you will fall in
-                                    <em>lust</em>
-                                    with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.
+                                    En Dulce Aroma creemos que el café es mucho más que una bebida: es una experiencia. Por eso, cuidamos cada detalle, desde la molienda hasta el último sorbo, para que sientas el verdadero aroma del Ecuador en cada visita.
+                                    Ya sea que nos visites para comenzar tu día, compartir una charla entre amigos o simplemente para disfrutar de un momento contigo mismo, nuestras puertas siempre están abiertas con el calor de un buen café.
                                 </p>
                             </div>
                         </div>
