--- a/startbootstrap-business-casual-gh-pages/about.html
+++ b/startbootstrap-business-casual-gh-pages/about.html
@@ -13,26 +13,6 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-        <style>
-            #btnSubir {
-                position: fixed;
-                bottom: 30px;
-                right: 30px;
-                z-index: 100;
-                background-color: #CA3B3B;
-                color: white;
-                border: none;
-                padding: 10px 15px;
-                border-radius: 50%;
-                font-size: 20px;
-                display: none;
-                box-shadow: 0 4px 6px rgba(0,0,0,0.3);
-                cursor: pointer;
-            }
-            #btnSubir:hover {
-                background-color: #a53030;
-            }
-        </style>
     </head>
     <body>
         <header>
@@ -80,8 +60,24 @@
             </div>
         </section>
 
-        <!-- Botón para subir arriba -->
-        <button id="btnSubir" title="Subir"><i class="fas fa-arrow-up"></i></button>
+        <!-- Sección de origen del cacao y café + mapa -->
+        <section class="page-section bg-faded">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 mb-4">
+                        <h3 class="section-heading-upper">Nuestro Origen</h3>
+                        <p>
+                            Nuestro cacao proviene de la región de **Manabí**, famosa por su riqueza agrícola y la pasión de sus agricultores.
+                            Además, el café que utilizamos es cultivado en las tierras altas ecuatorianas, donde el clima y el suelo fértil aportan un sabor inigualable.
+                            Estas zonas no solo garantizan la calidad, sino que también preservan el trabajo ancestral de muchas familias dedicadas a la agricultura sostenible.
+                        </p>
+                    </div>
+                    <div class="col-lg-6">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d997436.8070606901!2d-80.96043041292526!3d-0.6700278449739388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902be135d4a9b4a9%3A0x6751d99c3f3e2c28!2sManab%C3%AD!5e0!3m2!1ses-419!2sec!4v1681849291321!5m2!1ses-419!2sec" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <footer class="footer text-faded text-center py-5">
             <div class="container">
@@ -106,22 +102,8 @@
                 <p class="m-0 small mt-4">Copyright &copy; Dulce Aroma 2025</p>
             </div>
         </footer>
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
         <script src="js/scripts.js"></script>
-        <script>
-            const btnSubir = document.getElementById("btnSubir");
-            window.onscroll = function () {
-                if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-                    btnSubir.style.display = "block";
-                } else {
-                    btnSubir.style.display = "none";
-                }
-            };
-            btnSubir.addEventListener("click", function () {
-                window.scrollTo({ top: 0, behavior: "smooth" });
-            });
-        </script>
     </body>
 </html>
