cambios de Index y about

--- a/startbootstrap-business-casual-gh-pages/about.html
+++ b/startbootstrap-business-casual-gh-pages/about.html
@@ -67,7 +67,7 @@
                     <div class="col-lg-6 mb-4">
                         <h3 class="section-heading-upper">Nuestro Origen</h3>
                         <p>
-                            Nuestro cacao proviene de la región de **Manabí**, famosa por su riqueza agrícola y la pasión de sus agricultores.
+                            Nuestro cacao proviene de la región de Manabí, famosa por su riqueza agrícola y la pasión de sus agricultores.
                             Además, el café que utilizamos es cultivado en las tierras altas ecuatorianas, donde el clima y el suelo fértil aportan un sabor inigualable.
                             Estas zonas no solo garantizan la calidad, sino que también preservan el trabajo ancestral de muchas familias dedicadas a la agricultura sostenible.
                         </p>
