--- a/startbootstrap-business-casual-gh-pages/index.html
+++ b/startbootstrap-business-casual-gh-pages/index.html
@@ -33,7 +33,7 @@
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="products.html">Productos</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="store.html">Tienda</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="../startbootstrap-new-age-gh-pages/index.html">MovilApp</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="../startbootstrap-new-age-gh-pages/index.html"> App Móvil</a></li>
                     </ul>
                 </div>
             </div>
